Fixed rendered component being covered by menu

--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,7 @@
 .rendered-component {
   position:relative;
   top:70px;
+  margin-bottom:52px;
 }
 .bg-light-grey {
   background: #eaeaea;
@@ -21,6 +22,7 @@
   position:fixed;
   bottom:0;
   left:0;
+  heigth: 52px;
 }
 .font-px-18 {
   font-size:18px;
